        and `tinydebian-:debian-url-http-package-bugs'.
        (tinydebian-bts-mail-compose-macro): Remove word 'Debian' from
        generated buffer name.
        (tinydebian-bts-email-compose): Support Emacs BTS.
        (tinydebian-current-line-string): New.
        (tinydebian-emacs-bts-email-compose): New.
        (tinydebian-bts-email-compose): Support Emacs BTS control
        messages.

2009-02-05  Jari Aalto  <jaalto@jondo.cante.net>

	* other/folding.el (python-mode): Add `python-mode' with
	`folding-add-to-marks-list'.
	(folding-shift-in): Adjust indenting.
	(folding-show-current-entry): Fontify region when opening the font.
	This is a workaround, that woudl better be fixed in font-lock which
	treats \r characters as part of comment. That makes all inside a fold
	to colorize with `font-lock-comment-face'.

2009-02-05 Thu  Jari Aalto  <jari dot aalto A T cante dot net>

	* tiny/tinycygwin.el (tinycygwin-bug-report-email-prefix):
	Adjust documentation string.

2009-01-31  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-url): Support Emacs BTS.
	(tinydebian-bug-gnu-emacs-bts-p): New.
	(tinydebian-bug-gnu-emacs-bts-string-p): New.

	* tiny/tinylisp.el (tinylisp-jump-to-definition): Support
	compressed lisp files: .el.gz

2009-01-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyperl.el (tinyperl-pod-grep-faq-data-context-1):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).

	* tiny/tinylibmail.el (ti::mail-whois-parse-paragraph):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-tech):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-zone):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-records):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-admin):
	Change re-search-forward arg from 'noerr to t (Emacs 22.x fix).
	(ti::mail-whois-parse-admin):